Added basic description

--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-Hello World
+---
+layout: default
+permalink: /
+title: PwC
+description: Perceive with Confidence: Statistical Safety Assurances for Navigation with Learning-Based Perception
+importance: 1
+category: work
+---
+
+<h1><center><span style="font-weight:bold;">Perceive with Confidence::</span><br>Statistical Safety Assurances for Navigation with Learning-Based Perception</center></h1>
+<br>
+<table style="width: 80%; max-width: 800px; margin: 0 auto;">
+    <tr>
+        <td style="text-align: center; width: 100px;">
+            <span style="font-size: 22px; font-weight:bold;"><a href="https://anushridixit.com/" target="_blank">Anushri Dixit</a></span>
+        </td>
+        <td style="text-align: center; width: 100px;">
+            <span style="font-size: 22px; font-weight:bold;"><a href="https://may0mei.github.io/" target="_blank">Zhiting Mei</a></span>
+        </td>
+        <td style="text-align: center; width: 100px;">
+            <span style="font-size: 22px; font-weight:bold;"><a href="https://www.megbooker.com/" target="_blank">Meghan Booker</a></span>
+        </td>
+        <td style="text-align: center; width: 100px;">
+            <span style="font-size: 22px; font-weight:bold;"><a href="https://www.linkedin.com/in/mariko-storey" target="_blank">Mariko Storey-Matsutani</a></span>
+        </td>
+        <td style="text-align: center; width: 100px;">
+            <span style="font-size: 22px; font-weight:bold;"><a href="https://allenzren.github.io/" target="_blank">Allen Z. Ren</a></span>
+        </td>
+        <td style="text-align: center; width: 100px;">
+            <span style="font-size: 22px; font-weight:bold;"><a href="https://irom-lab.princeton.edu/majumdar/" target="_blank">Anirudha Majumdar</a></span>
+        </td>
+    </tr>
+</table>
+<td align=center style="width: 80%; max-width: 800px; margin: 0 auto; text-align: center;">
+<div style="text-align: center; max-width: 200px; margin: 0 auto;">
+    <p style="margin-top: 4px;"></p>
+    <a href="https://irom-lab.princeton.edu/">
+        <img src="irom_lab_logo.png" alt="IRoM" style="width: 100%;">
+    </a>
+</div>
+<p style="margin-top: 2px;"></p>
+<center><span style="font-size:20px"><a href="https://robo.princeton.edu/" target="_blank">Princeton University</a></span></center>
+</td>
+<br>
+<table style="width: 70%; max-width: 800px; margin: 0 auto;">
+    <tr>
+    <td align=center width=20px><center><span style="font-size:28px">
+        <a href="https://arxiv.org/pdf/2311.14100.pdf" target="_blank"><img src=".PDF_file_icon.png" alt="PDF File Icon" style="max-width: 50px; height: auto;"></a></span></center>
+    </td>
+    <td align=center width=20px><center><span style="font-size:28px">
+        <a href="https://youtu.be/YS1Q2GEROg8" target="_blank"><img src="YouTube_full-color_icon_(2017).png" alt="Youtube Play Icon" style="max-width: 50px; height: auto;"></a></span></center>
+    </td>
+        <td align=center width=20px><center><span style="font-size:28px">
+        <a href="https://github.com/irom-lab/perception-guarantees" target="_blank"><img src="GitHub_Invertocat_Logo.png" alt="Github Icon" style="max-width: 50px; height: auto;"></a></span></center>
+    </td></tr>
+    <tr>
+    <td align=center width=20px><center><span style="font-size:28px"><a href="https://arxiv.org/pdf/2311.14100.pdf">[PDF]</a></span></center></td>
+    <td align=center width=20px><center><span style="font-size:28px"><a href="https://youtu.be/msWLSfOmTpI">[Video]</a></span></center></td>
+    <td align=center width=20px><center><span style="font-size:28px"><a href="https://github.com/natesimon/MonoNav/">[Code]</a></span></center></td>
+    </tr>
+</table>
+
+<div style="font-size: 18px; width: 100%; max-width: 800px; margin: 0 auto; text-align:justify">
+    <p><strong>Bibtex</strong></p>
+    <pre>
+@inproceedings{simon2023mononav,
+    title     = {MonoNav: MAV Navigation via Monocular Depth Estimation and Reconstruction},
+    author    = {Nathaniel Simon and Anirudha Majumdar},
+    booktitle = {Symposium on Experimental Robotics (ISER)},
+    year      = {2023},
+    url       = {https://arxiv.org/abs/2311.14100}
+}</pre>
+</div>
