Update fonts, etc

--- a/index.html
+++ b/index.html
@@ -1,13 +1,72 @@
----
-layout: default
-permalink: /
-title: PwC
-description: Perceive with Confidence: Statistical Safety Assurances for Navigation with Learning-Based Perception
-importance: 1
-category: work
----
+<!DOCTYPE html>
+<html>
 
-<h1><center><span style="font-weight:bold;">Perceive with Confidence::</span><br>Statistical Safety Assurances for Navigation with Learning-Based Perception</center></h1>
+<head lang="en">
+    <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QXEE17ZF5T"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-QXEE17ZF5T');
+    </script>
+
+<title>Perceive with Confidence: Statistical Safety Assurances for Navigation with Learning-Based Perception</title>
+<link rel="icon" type="image/png" href="img/favicon_2.png">
+
+<meta name="description" content="Perceive with Confidence: Statistical Safety Assurances for Navigation with Learning-Based Perception">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- <base href="/"> -->
+
+    <!--FACEBOOK-->
+<!-- <meta property="og:image" content="https://robot-help.github.io/img/share_image.png">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="682">
+<meta property="og:image:height" content="682">
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://robot-help.github.io/"/>
+<meta property="og:title" content="Robots That Ask For Help" />
+<meta property="og:description" content="Project page for Robots That Ask For Help: Uncertainty Alignment for Large Language Model Planners." /> -->
+
+    <!--TWITTER-->
+<!-- <meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Robots That Ask For Help" />
+<meta name="twitter:description" content="Project page for Robots That Ask For Help: Uncertainty Alignment for Large Language Model Planners." />
+<meta name="twitter:image" content="https://robot-help.github.io/img/share_image.png" /> -->
+
+<!--     <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
+<!-- <link rel="icon" type="image/png" href="img/seal_icon.png"> -->
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.8.0/codemirror.min.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
+<link rel="stylesheet" href="css/app.css">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.8.0/codemirror.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js"></script>
+
+<script src="js/app.js"></script>
+
+<style>
+    .nav-pills {
+      position: relative;
+      display: inline;
+    }
+    .imtip {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+</style>
+</head>
+<body>
+<h1><center><span style="font-weight:bold;">Perceive with Confidence:</span><br>Statistical Safety Assurances for Navigation with Learning-Based Perception</center></h1>
 <br>
 <table style="width: 80%; max-width: 800px; margin: 0 auto;">
     <tr>
@@ -45,7 +104,7 @@ category: work
 <table style="width: 70%; max-width: 800px; margin: 0 auto;">
     <tr>
     <td align=center width=20px><center><span style="font-size:28px">
-        <a href="https://arxiv.org/pdf/2311.14100.pdf" target="_blank"><img src=".PDF_file_icon.png" alt="PDF File Icon" style="max-width: 50px; height: auto;"></a></span></center>
+        <a href="https://arxiv.org/pdf/2311.14100.pdf" target="_blank"><img src="PDF_file_icon.png" alt="PDF File Icon" style="max-width: 50px; height: auto;"></a></span></center>
     </td>
     <td align=center width=20px><center><span style="font-size:28px">
         <a href="https://youtu.be/YS1Q2GEROg8" target="_blank"><img src="YouTube_full-color_icon_(2017).png" alt="Youtube Play Icon" style="max-width: 50px; height: auto;"></a></span></center>
@@ -55,8 +114,8 @@ category: work
     </td></tr>
     <tr>
     <td align=center width=20px><center><span style="font-size:28px"><a href="https://arxiv.org/pdf/2311.14100.pdf">[PDF]</a></span></center></td>
-    <td align=center width=20px><center><span style="font-size:28px"><a href="https://youtu.be/msWLSfOmTpI">[Video]</a></span></center></td>
-    <td align=center width=20px><center><span style="font-size:28px"><a href="https://github.com/natesimon/MonoNav/">[Code]</a></span></center></td>
+    <td align=center width=20px><center><span style="font-size:28px"><a href="https://youtu.be/YS1Q2GEROg8">[Video]</a></span></center></td>
+    <td align=center width=20px><center><span style="font-size:28px"><a href="https://github.com/irom-lab/perception-guarantees">[Code]</a></span></center></td>
     </tr>
 </table>
 
@@ -71,3 +130,6 @@ category: work
     url       = {https://arxiv.org/abs/2311.14100}
 }</pre>
 </div>
+
+</body>
+</html>
