Added video and abstract with anchor figure

--- a/index.html
+++ b/index.html
@@ -15,31 +15,9 @@
     </script>
 
 <title>Perceive with Confidence: Statistical Safety Assurances for Navigation with Learning-Based Perception</title>
-<link rel="icon" type="image/png" href="img/favicon_2.png">
 
 <meta name="description" content="Perceive with Confidence: Statistical Safety Assurances for Navigation with Learning-Based Perception">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- <base href="/"> -->
-
-    <!--FACEBOOK-->
-<!-- <meta property="og:image" content="https://robot-help.github.io/img/share_image.png">
-<meta property="og:image:type" content="image/png">
-<meta property="og:image:width" content="682">
-<meta property="og:image:height" content="682">
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://robot-help.github.io/"/>
-<meta property="og:title" content="Robots That Ask For Help" />
-<meta property="og:description" content="Project page for Robots That Ask For Help: Uncertainty Alignment for Large Language Model Planners." /> -->
-
-    <!--TWITTER-->
-<!-- <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Robots That Ask For Help" />
-<meta name="twitter:description" content="Project page for Robots That Ask For Help: Uncertainty Alignment for Large Language Model Planners." />
-<meta name="twitter:image" content="https://robot-help.github.io/img/share_image.png" /> -->
-
-<!--     <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
-<!-- <link rel="icon" type="image/png" href="img/seal_icon.png"> -->
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.8.0/codemirror.min.css">
@@ -66,69 +44,92 @@
 </style>
 </head>
 <body>
-<h1><center><span style="font-weight:bold;">Perceive with Confidence:</span><br>Statistical Safety Assurances for Navigation with Learning-Based Perception</center></h1>
-<br>
-<table style="width: 80%; max-width: 800px; margin: 0 auto;">
-    <tr>
-        <td style="text-align: center; width: 100px;">
-            <span style="font-size: 22px; font-weight:bold;"><a href="https://anushridixit.com/" target="_blank">Anushri Dixit</a></span>
-        </td>
-        <td style="text-align: center; width: 100px;">
-            <span style="font-size: 22px; font-weight:bold;"><a href="https://may0mei.github.io/" target="_blank">Zhiting Mei</a></span>
-        </td>
-        <td style="text-align: center; width: 100px;">
-            <span style="font-size: 22px; font-weight:bold;"><a href="https://www.megbooker.com/" target="_blank">Meghan Booker</a></span>
-        </td>
-        <td style="text-align: center; width: 100px;">
-            <span style="font-size: 22px; font-weight:bold;"><a href="https://www.linkedin.com/in/mariko-storey" target="_blank">Mariko Storey-Matsutani</a></span>
-        </td>
-        <td style="text-align: center; width: 100px;">
-            <span style="font-size: 22px; font-weight:bold;"><a href="https://allenzren.github.io/" target="_blank">Allen Z. Ren</a></span>
-        </td>
-        <td style="text-align: center; width: 100px;">
-            <span style="font-size: 22px; font-weight:bold;"><a href="https://irom-lab.princeton.edu/majumdar/" target="_blank">Anirudha Majumdar</a></span>
-        </td>
-    </tr>
-</table>
-<td align=center style="width: 80%; max-width: 800px; margin: 0 auto; text-align: center;">
-<div style="text-align: center; max-width: 200px; margin: 0 auto;">
-    <p style="margin-top: 4px;"></p>
-    <a href="https://irom-lab.princeton.edu/">
-        <img src="irom_lab_logo.png" alt="IRoM" style="width: 100%;">
-    </a>
+    <div class="container" id="main">
+        <div class="row mt-4">
+            <h2 class="col-md-12 text-center">
+                <b><font size="+6">Perceive with Confidence:</font></b> </br> Statistical Safety Assurances for Navigation with Learning-Based Perception </br> 
+            </h2>
+        </div>
+<!-- <h1><center><span style="font-weight:bold;">Perceive with Confidence:</span><br>Statistical Safety Assurances for Navigation with Learning-Based Perception</center></h1> -->
+<div class="row">
+    <div class="col-md-12 text-center">
+        <ul class="list-inline">
+        <br>
+        <li><a href="//www.anushridixit.com/">Anushri Dixit</a></li>
+        <li><a href="//may0mei.github.io/">Zhiting Mey</a></li>
+        <li><a href="//www.megbooker.com/">Meghan Booker</a></li>
+        <li><a href="//www.linkedin.com/in/mariko-storey">Mariko Storey-Matsutani</a></li>
+        <li><a href="//allenzren.github.io">Allen Z. Ren</a></li>
+        <li><a href="//irom-lab.princeton.edu/majumdar/">Anirudha Majumdar</a></li>
+        <br>
+        <br>
+            <a href="https://irom-lab.princeton.edu/">
+                <image src="irom_lab _logo.png" height="35px"> 
+                <!-- Google DeepMind -->
+            </a>
+            &nbsp&nbsp&nbsp
+            <a href="https://www.princeton.edu/">
+                <image src="PU1line.svg" height="55px"> 
+                <!-- Princeton University                        -->
+            </a>
+        </ul>
+    </div>
 </div>
-<p style="margin-top: 2px;"></p>
-<center><span style="font-size:20px"><a href="https://robo.princeton.edu/" target="_blank">Princeton University</a></span></center>
-</td>
-<br>
-<table style="width: 70%; max-width: 800px; margin: 0 auto;">
-    <tr>
-    <td align=center width=20px><center><span style="font-size:28px">
-        <a href="https://arxiv.org/pdf/2311.14100.pdf" target="_blank"><img src="PDF_file_icon.png" alt="PDF File Icon" style="max-width: 50px; height: auto;"></a></span></center>
-    </td>
-    <td align=center width=20px><center><span style="font-size:28px">
-        <a href="https://youtu.be/YS1Q2GEROg8" target="_blank"><img src="YouTube_full-color_icon_(2017).png" alt="Youtube Play Icon" style="max-width: 50px; height: auto;"></a></span></center>
-    </td>
-        <td align=center width=20px><center><span style="font-size:28px">
-        <a href="https://github.com/irom-lab/perception-guarantees" target="_blank"><img src="GitHub_Invertocat_Logo.png" alt="Github Icon" style="max-width: 50px; height: auto;"></a></span></center>
-    </td></tr>
-    <tr>
-    <td align=center width=20px><center><span style="font-size:28px"><a href="https://arxiv.org/pdf/2311.14100.pdf">[PDF]</a></span></center></td>
-    <td align=center width=20px><center><span style="font-size:28px"><a href="https://youtu.be/YS1Q2GEROg8">[Video]</a></span></center></td>
-    <td align=center width=20px><center><span style="font-size:28px"><a href="https://github.com/irom-lab/perception-guarantees">[Code]</a></span></center></td>
-    </tr>
-</table>
 
-<div style="font-size: 18px; width: 100%; max-width: 800px; margin: 0 auto; text-align:justify">
-    <p><strong>Bibtex</strong></p>
-    <pre>
-@inproceedings{simon2023mononav,
-    title     = {MonoNav: MAV Navigation via Monocular Depth Estimation and Reconstruction},
-    author    = {Nathaniel Simon and Anirudha Majumdar},
-    booktitle = {Symposium on Experimental Robotics (ISER)},
-    year      = {2023},
-    url       = {https://arxiv.org/abs/2311.14100}
-}</pre>
+<br>
+
+<div class="row justify-content-md-center">
+    <div class="col-md-2 text-center">
+        <a href="https://arxiv.org/abs/2307.01928">
+        <image src="PDF_file_icon.png" height="45px">
+        <h4><strong>Paper</strong></h4>
+        <!-- <h6>Paper</h6> -->
+        </a>
+    </div>
+    <div class="col-md-2 text-center">
+        <a href="https://github.com/irom-lab/perception-guarantees">
+        <image src="GitHub_Invertocat_Logo.png" height="45px">
+        <h4><strong>Code</strong></h4>
+        <!-- <h6>Code (coming soon)</h6> -->
+        </a>
+    </div>
+</div>
+
+<div class="row mt-4">
+    <div class="col-md-12 text-center">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YS1Q2GEROg8?si=TislWvQD6s57eDkJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+</div>
+
+<div class="row justify-content-md-center">
+    <div class="col-md-10 col-lg-8">
+        <h3 class="mt-4 mb-2">
+            Abstract
+        </h3>
+        <p class="text-justify">
+            Rapid advances in perception have enabled large pre-trained models to be used out of the box for processing high-dimensional, noisy, and partial observations of the world into rich geometric representations (e.g., occupancy predictions). However, safe integration of these models onto robots remains challenging due to a lack of reliable performance in unfamiliar environments. In this work, we present a framework for rigorously quantifying the uncertainty of pre-trained perception models for occupancy prediction in order to provide end-to-end statistical safety assurances for navigation. We build on techniques from conformal prediction for producing a calibrated perception system that lightly processes the outputs of a pre-trained model while ensuring generalization to novel environments and robustness to distribution shifts in states when perceptual outputs are used in conjunction with a planner. The calibrated system can be used in combination with any safe planner to provide an end-to-end statistical assurance on safety in a new environment with a user-specified threshold 1-epsilon. We evaluate the resulting approach — which we refer to as Perceive with Confidence (PwC) - with experiments in simulation and on hardware where a quadruped robot navigates through indoor environments containing objects unseen during training or calibration. These experiments validate the safety assurances provided by PwC and demonstrate significant improvements in empirical safety rates compared to baselines.
+        </p>
+        <p style="text-align:center;">
+            <image src="processDiagram.png" width="100%">
+        </p>
+    </div>
+</div>
+<div class="row justify-content-md-center">
+    <div class="col-md-10 col-lg-8">
+        <h3>
+            Citation 
+        </h3>
+        <a href="https://arxiv.org/abs/2307.01928">[arxiv version]</a>
+        <div class="form-group col-md-12">
+            <textarea id="bibtex" class="form-control" rows="8" readonly>
+@inproceedings{pwc2024,
+title={Perceive with Confidence: Statistical Safety Assurances for Navigation with Learning-Based Perception},
+author={Dixit, Anushri and Mey, Zhiting and Booker, Meghan and Storey-Matsutani, Mariko and Ren, Allen Z. and  Majumdar, Anirudha},
+booktitle={arXiv preprint arXiv:2307.01928},
+year={2023}
+}</textarea>
+        </div>
+    </div>
 </div>
 
 </body>
