--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <ul class="list-inline">
         <br>
         <li><a href="//www.anushridixit.com/">Anushri Dixit</a></li>
-        <li><a href="//may0mei.github.io/">Zhiting Mey</a></li>
+        <li><a href="//may0mei.github.io/">Zhiting Mei</a></li>
         <li><a href="//www.megbooker.com/">Meghan Booker</a></li>
         <li><a href="//www.linkedin.com/in/mariko-storey">Mariko Storey-Matsutani</a></li>
         <li><a href="//allenzren.github.io">Allen Z. Ren</a></li>
@@ -124,7 +124,7 @@
             <textarea id="bibtex" class="form-control" rows="8" readonly>
 @inproceedings{pwc2024,
 title={Perceive with Confidence: Statistical Safety Assurances for Navigation with Learning-Based Perception},
-author={Dixit, Anushri and Mey, Zhiting and Booker, Meghan and Storey-Matsutani, Mariko and Ren, Allen Z. and  Majumdar, Anirudha},
+author={Dixit, Anushri and Mei, Zhiting and Booker, Meghan and Storey-Matsutani, Mariko and Ren, Allen Z. and  Majumdar, Anirudha},
 booktitle={arXiv preprint arXiv:2307.01928},
 year={2023}
 }</textarea>
