--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <div class="row justify-content-md-center">
     <div class="col-md-2 text-center">
-        <a href="https://arxiv.org/abs/2307.01928">
+        <a href="https://perceive-with-confidence.github.io/">
         <image src="PDF_file_icon.png" height="45px">
         <h4><strong>Paper</strong></h4>
         <!-- <h6>Paper</h6> -->
@@ -124,7 +124,7 @@
 @inproceedings{pwc2024,
 title={Perceive with Confidence: Statistical Safety Assurances for Navigation with Learning-Based Perception},
 author={Dixit, Anushri and Mei, Zhiting and Booker, Meghan and Storey-Matsutani, Mariko and Ren, Allen Z. and  Majumdar, Anirudha},
-booktitle={arXiv preprint arXiv:2307.01928},
+booktitle={arXiv preprint arXiv:},
 year={2023}
 }</textarea>
         </div>
