--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <h3>
             Citation 
         </h3>
-        <a href="https://arxiv.org/abs/2307.01928">[arxiv version]</a>
+        <a href="https://perceive-with-confidence.github.io/">[arxiv version]</a>
         <div class="form-group col-md-12">
             <textarea id="bibtex" class="form-control" rows="8" readonly>
 @inproceedings{pwc2024,
