Fixed some display issues

--- a/index.html
+++ b/index.html
@@ -62,17 +62,21 @@
         <li><a href="//allenzren.github.io">Allen Z. Ren</a></li>
         <li><a href="//irom-lab.princeton.edu/majumdar/">Anirudha Majumdar</a></li>
         <br>
-        <br>
-            <a href="https://irom-lab.princeton.edu/">
-                <image src="irom_lab _logo.png" height="35px"> 
-                <!-- Google DeepMind -->
-            </a>
-            &nbsp&nbsp&nbsp
-            <a href="https://www.princeton.edu/">
-                <image src="PU1line.svg" height="55px"> 
-                <!-- Princeton University                        -->
-            </a>
-        </ul>
+    </div>
+</div>
+
+<div class="row justify-content-md-center">
+    <div class="col-md-12 text-center">
+        <a href="https://irom-lab.princeton.edu/">
+            <image src="irom_lab.png" height="35px"> 
+            <!-- IRoM lab logo -->
+        </a>
+    </div>
+    <div class="col-md-12 text-center">
+        <a href="https://www.princeton.edu/">
+            <image src="PU1line.svg" height="55px"> 
+            <!-- Princeton University                        -->
+        </a>
     </div>
 </div>
 
