--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 <div class="row justify-content-md-center">
     <div class="col-md-2 text-center">
-        <a href="https://perceive-with-confidence.github.io/">
+        <a href="https://arxiv.org/abs/2403.08185">
         <image src="PDF_file_icon.png" height="45px">
         <h4><strong>Paper</strong></h4>
         <!-- <h6>Paper</h6> -->
@@ -122,13 +122,13 @@
         <h3>
             Citation 
         </h3>
-        <a href="https://perceive-with-confidence.github.io/">[arxiv version]</a>
+        <a href="https://arxiv.org/abs/2403.08185">[arxiv version]</a>
         <div class="form-group col-md-12">
             <textarea id="bibtex" class="form-control" rows="8" readonly>
 @inproceedings{pwc2024,
 title={Perceive with Confidence: Statistical Safety Assurances for Navigation with Learning-Based Perception},
 author={Dixit, Anushri and Mei, Zhiting and Booker, Meghan and Storey-Matsutani, Mariko and Ren, Allen Z. and  Majumdar, Anirudha},
-booktitle={arXiv preprint arXiv:},
+booktitle={arXiv preprint arXiv:2403.08185},
 year={2023}
 }</textarea>
         </div>
