--- a/index.html
+++ b/index.html
@@ -135,5 +135,12 @@ year={2023}
     </div>
 </div>
 
+<div class="row justify-content-md-center">
+    <div class="col-md-10 col-lg-8">
+         <a Website adapted from </a>
+         <a href="https://robot-help.github.io/">KnowNo</a>
+    </div>
+</div>
+        
 </body>
 </html>
