--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@ year={2023}
 
 <div class="row justify-content-md-center">
     <div class="col-md-10 col-lg-8">
-         <a Website adapted from </a>
-         <a href="https://robot-help.github.io/">KnowNo</a>
+         <a Website adapted from href="https://robot-help.github.io/">KnowNo</a>
     </div>
 </div>
         
